# katz_external_mem

./: .gitignore  CMakeLists.txt  README.md
report/: report.md
scripts/: gen_graph.py  verify_katz.py
src/: main.cpp
src/core/: katz.hpp
src/io/: csv_reader.hpp  edge_file.hpp  external_sort.hpp  types.hpp
src/utils/: timer.hpp
